# lqsd

./: .gitignore  Cargo.toml  LICENCE  README.adoc  README.md  build-release.sh  manpage.adoc
src/: cli.rs  config.rs  fs.rs  main.rs
