[package]
name = "lqsd"
version = "0.1.1"
authors = ["Marko Korhonen <lqsd@functionalhacker.korhonen.cc>"]
edition = "2018"
publish = false
description = "Dims your screen smoothly"
repository = "https://git.korhonen.cc/FunctionalHacker/lqsd"
license = "MIT"

[dependencies]
clap = "2.33.0"
serde = {version = "1.0.104", features = ["derive"]}
toml = "0.5.6"
xdg = "2.2.0"
