[package]
name = "lqsd"
version = "0.1.1"
authors = ["Marko Korhonen <lqsd@functionalhacker.korhonen.cc>"]
edition = "2018"
publish = false
description = "Dims your screen smoothly"
repository = "https://git.korhonen.cc/FunctionalHacker/lqsd"
license = "MIT"

[dependencies]
clap = { version = "4.1.8" }
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
xdg = "2.4.1"
